fix: improve contrast and highlight price tag (#295)
* refactor: clean up CSS in footer component

* fix: improve contrast and highlight price tag

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -15,6 +15,7 @@
   --light-bg-color: hsl(32, 100%, 87%);
   --dark-bg-color: hsl(20, 10%, 18%);
   --medium-bg-color: hsl(30, 79%, 65%);
+  --attention-bg-color: hsl(0, 100%, 36%);
 
   /* Text colors */
   --light-text-color: hsl(0, 100%, 100%);
